CB-33218 Use Slice with query timeout for structured event queries
Replace Page with Slice for CDP structured event queries to avoid
expensive COUNT queries on large datasets. Add 5s query timeout hint
to prevent slow queries from holding DB connections indefinitely.
Add index on (resourcecrn, timestamp) to support delete and ordering.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>